src/app.css
html, body {
    margin: 0;
    padding: 0;
    cursor: default;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

body > div {
    height: 100%;
}

/*noinspection CssUnresolvedCustomProperty*/
:root {
    --global-backdrop-filter: saturate(180%) blur(20px);
    --global-navbar-height: calc(60px + var(--tg-safe-area-inset-bottom));
    --tg-theme-liquid-glass-border: color-mix(in srgb, var(--tg-theme-section-separator-color) 60%, transparent);
    --tg-theme-navbar-selected: color-mix(in srgb, var(--tg-theme-section-separator-color) 45%, transparent);
}

* {
    font-family: 'SFProText', serif;
    -webkit-tap-highlight-color: transparent;
    box-sizing: border-box;
    letter-spacing: -0.48px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

/*
Font files are sourced from Apple's official website.
Source:
https://www.apple.com/wss/fonts/SF-Pro-Text/v3/sf-pro-text_regular.woff2
*/

@font-face {
    font-family: 'SFProText';
    src: url('assets/fonts/SFProText-Regular.woff2') format('woff2'),
        url('assets/fonts/SFProText-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'SFProText';
    src: url('assets/fonts/SFProText-Medium.woff2') format('woff2'),
        url('assets/fonts/SFProText-Medium.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'SFProText';
    src: url('assets/fonts/SFProText-SemiBold.woff2') format('woff2'),
        url('assets/fonts/SFProText-SemiBold.woff') format('woff');
    font-weight: 600;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'SFProText';
    src: url('assets/fonts/SFProText-Bold.woff2') format('woff2'),
        url('assets/fonts/SFProText-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'SFProRounded';
    src: url('assets/fonts/SFProRounded-Bold.woff2') format('woff2'),
        url('assets/fonts/SFProRounded-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

